--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,8 @@
     "@types/node": "^16.11.27",
     "@types/react": "^18.0.6",
     "@types/react-dom": "^18.0.2",
-    "bingmaps-react": "^1.2.10",
     "react": "^18.0.0",
+    "react-bingmaps-vnext": "^1.0.4",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.6.3",
